# goverify-engine

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  custom_test.py  docker-compose.yml  enroll_test_data.py  go.mod  go.sum  k8s-test.sh  main.py  pyproject.toml  test_images.sh  test_kyc.sh  test_optimized.sh  test_real_check.sh  test_suite.py  test_with_images.py
ai-service/: Dockerfile  main.py  pyproject.toml  requirements.txt  test_api.py  warmup.py
cmd/kyc-api/: main.go
cmd/kyc-worker/: main.go
deploy/: Dockerfile.api  Dockerfile.worker
deploy/grafana/dashboards/: go-runtime-dashboard.json  kyc-dashboard.json
deploy/helm/goverify/: Chart.yaml  values.yaml
deploy/kubernetes/: test-infra.yaml
deploy/prometheus/: prometheus.yml
docs/: architecture.md  docs.go  swagger.json  swagger.yaml
internal/api/: auth.go  handlers.go  middleware.go  redis.go  router.go
internal/auth/: jwt.go
internal/config/: config.go
internal/domain/: models.go
internal/embedding/: accuracy_test.go  factory.go  mock.go  onnx.go  provider_mock.go  provider_noonnx.go  provider_onnx.go  python_client.go  real.go
internal/kafka/: consumer.go  kafka.go
internal/observability/: observability.go
internal/repository/: user.go
internal/service/: auth.go  service.go  service_test.go
internal/vectordb/: milvus.go
internal/worker/: worker.go
pkg/crypto/: aes.go
pkg/hash/: argon2.go
pkg/logger/: logger.go
scratch/: convert_to_onnx.py  inspect_h5.py  inspect_onnx.go  inspect_onnx.py  test_images.py
tests/e2e/: test_suite.py  test_suite_v2.py
(+12 files in other folders)
