[project]
name = "ai-service"
version = "0.1.0"
description = "AI Microservice for Face & Name Verification"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.28.0",
    "insightface==0.7.3",
    "onnxruntime==1.17.1",
    "opencv-python-headless==4.9.0.80",
    "python-multipart==0.0.9",
    "pydantic==2.6.3",
    "numpy==1.26.4",
    "sentence-transformers==2.6.1",
]
